# mailing

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
app/: consumer.py  web.py
app/api/base/: ping.py
app/api/dependencies/: repositories.py
app/api/v1/: __init__.py  send_message_to_queue.py
app/core/: logging.py
app/core/settings/: __init__.py  accounts.py  base.py  connections_settings.py
app/domain/entities/: error_log.py  message_sending_log.py  message_to_send.py
app/domain/enums/: email_message_type.py  error_type.py  message_sending_status.py
app/repositories/db/: base.py  fake_db.py  mongodb_repository.py
app/repositories/mailer/: base.py  fake_mailer.py  fastapi_mailer.py
app/repositories/queue/: base.py  fake_queue.py  kafka.py
app/services/: consumer_service.py  producer_service.py
app/tests/: initial.py  test_consumer.py  test_producer.py
