[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Дмитрий Шойтов <shoytov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.942"
pep8 = "^1.7.1"
pylint = "^2.13.5"
black = "^22.3.0"
autoflake = "^1.4"
pydantic = "^1.9.0"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
loguru = "^0.6.0"
fastapi-mail = "^1.0.8"
kafka-python = "^2.0.2"
aiokafka = "^0.7.2"
motor = "^3.0.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
